# rsf-orders-service

./: .env.EXAMPLE  .gitignore  README.md  prototyping.md  pyproject.toml
app/: cli.py  config.py  main.py
app/api/v0/: bill.py  order.py  product.py  user.py
app/bill/: __init__.py  models.py  schemas.py  service.py  views.py
app/bill/adapters/: __init__.py  sql.py
app/bill/domain/: models.py  port.py  ports.py
app/core/: config.py  db.py  logging.py  models.py  service.py
app/core/db/: __init__.py  base.py  session.py
app/db/: __init__.py  base.py  registry.py  session.py
app/db/schemas/: __init__.py  base.py  bill.py  order.py  payment.py  product.py  user.py
app/exceptions/: __init__.py
app/models/: __init__.py  bill.py  order.py  payment.py  product.py  user.py
app/order/: __init__.py  models.py  schemas.py  service.py  views.py
app/order/adapters/: __init__.py  sql.py
app/order/domain/: models.py  port.py
app/payment/: __init__.py  models.py  schemas.py  service.py  views.py
app/product/: __init__.py  models.py  schemas.py  service.py  views.py
app/product/adapters/: __init__.py  sql.py
app/product/domain/: models.py  (+2 more)
app/routes/: product.py  user.py
app/schemas/: payment.py  product.py
app/services/: __init__.py  bill.py  order.py  payment.py  product.py  user.py
app/user/: __init__.py  models.py  schemas.py  service.py  views.py
bruno-config/rsf-orders-service/: Delete single user.bru  bruno.json
tests/: conftest.py  test_bill.py  test_users.py
tests/integration/: test_user.py  utils.py
tests/unit/: test_user.py
(+12 files in other folders)
