[project]
name = "rsf-orders-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.1",
    "pydantic>=2.12.3",
]

[project.scripts]
serve = "app.main:run"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "pytest>=8.4.2",
]
