[project]
name = "rsf-orders-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.120.1",
    "orjson>=3.11.4",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
dev = "app.cli:main"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "pytest>=8.4.2",
]

[tool.uv]
package=true